fix: hand out the OIDC providers in the order of the configuration
Two providers that declare the same issuer-uri cannot both own that
issuer, so some order has to decide which of them the steps of a
request read. The order the library already has is the order of the
merge: the flat oidc block first, then the provider entries as the
configuration declares them, which is the order the client
registrations of a decoder carry as well.

The OIDC configuration port lost that order, because it handed out its
merged map through Map.copyOf, whose iteration order the JVM salts per
run. The per-issuer claims converters therefore sorted the ids
alphabetically to get a stable winner, and that winner disagreed with
the registration the decoder of the same deployment read.

The port now hands out an order-preserving copy, and the converters
read that order instead of sorting their own.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>